2007-09-30  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Camera.cs: bugfix: I need to set disposed = true *after* i disconnect
	  from the device.

2007-09-30  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Cosmetic fixes (spaces VS tabs)

2007-09-30  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Added in helper properties to reveal more information

2007-09-30  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Updated the mimetype usage a bit
	* src/FileSystem.cs: Added in methods which count how many files there are
	  in a folder
	* src/Camera.cs: Expose a List<FileSystem> rather than FileSystem[]. Same
	  for the Camera[]
	* src/Files/PlaylistFile.cs, src/Makefile.am, libgphoto2-sharp.mdp: Added
	  PlaylistFile class

2007-09-29  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/FileSystem.cs: Stripping out the 'BaseDirectory' correctly when
	  reading files from the camera.

2007-09-29  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/FileSystem.cs: Fixed bug in DeleteFile(string, string). Also minor
	  cosmetic changes for other methods

2007-09-29  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/FileSystem.cs: Fixed bug in DeleteFile(string, string). Also minor
	  cosmetic changes for other methods

2007-09-29  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Put in a check to make sure metadata isn't updated on a local
	  file (as it'll fail)
	* src/FileSystem.cs: Added a parameterless overload for GetFolders which
	  returns all the folders in the root directory.

2007-09-29  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/FileSystem.cs: An empty directory is allowable, it'll just work off
	  the root directory then.

2007-09-29  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Base/CameraFile.cs: GetDataAndSize handles the scenario when a null
	  pointer is returned.

2007-09-28  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs, src/FileSystem.cs, src/Camera.cs: Renamed the CameraDevice