@@ -1,3 +1,7 @@
+2007-10-01  Alan McGovern <alan.mcgovern@gmail.com> 
+
+	* src/Camera.cs: Always return a non-null list even if no cameras are found
+
 2007-09-30  Alan McGovern <alan.mcgovern@gmail.com> 
 
 	* src/Camera.cs: bugfix: I need to set disposed = true *after* i disconnect
